--- a/_posts/2018-03-07-aria2-plex.md
+++ b/_posts/2018-03-07-aria2-plex.md
@@ -15,9 +15,9 @@ date: 2018-03-07 21:55 +0800
 入手一个 VPS
 ---
 
-选择 VPS 的时候，需要考虑的因素有很多，比如价钱、机房位置、是否直连、流量带宽、配置（内存容量等）、IDC 服务质量（包括工单处理、退款、是否会跑路），以及 IDC 的 TOS。
+选择 VPS 的时候，需要考虑的因素有很多，比如价钱、机房位置、是否直连、流量带宽、配置（内存容量等）、VPS 服务商服务质量（包括工单处理、退款、是否会跑路），以及服务商的 TOS。
 
-根据自己的情况，选择一个合适的 VPS。如果没有经验的话，AWS 和 Google Cloud Platform 都可以试用一年，而且 AWS 和 GCP 的机子相对来说都比较稳定。对于其它的 IDC，购买之前最好在网上的各个主机测评网站搜一下评论。
+根据自己的情况，选择一个合适的 VPS。如果没有经验的话，AWS 和 Google Cloud Platform 都可以试用一年，而且 AWS 和 GCP 的机子相对来说都比较稳定。对于其它的服务商，购买之前最好在网上的各个主机测评网站搜一下评论。
 
 Docker basics
 ---
