modify: iOS14 widget toc

--- a/_posts/2020-12-30-ios14-widget101.md
+++ b/_posts/2020-12-30-ios14-widget101.md
@@ -4,10 +4,8 @@ title: iOS14 Widget 开发 101
 date: 2020-11-27 22:11 +0800
 ---
 
-[TOC]
-
-苹果在今年的 WWDC20 上发布了小组件（WidgetKit），支持在 iOS、iPadOS 主屏幕展示动态信息和个性化内容。与 Today Widget 最大的不同在于，iOS14 的 Widget 是可以放在桌面上，可以作为 App 新的流量入口。Keep 目前实现的桌面小组件效果如下，主要展现用户不同品类的训练数据，并方便用户开始训练。
-
+* TOC
+{:toc}
 ![image-20201124185813421](https://tva1.sinaimg.cn/large/0081Kckwly1gl0gq300xuj30ju0f5dpj.jpg)
 
 我们直接从创建 Widget Extension 开始。
